--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ventgold</title>
     <meta property="og:image" content="icons\фавикон вентголд пнг.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="icons\фавикон вентголд пнг.png">
+    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
 </head>
   <body>
     <div id="root"></div>
